--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "@types/passport": "^1.0.11",
     "@types/passport-github2": "^1.2.5",
     "@types/passport-local": "^1.0.35",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
+    "express": "^4.21.2",
     "express-ejs-layouts": "^2.5.0",
+    "express-flash": "^0.0.2",
     "express-layouts": "^1.0.0",
-    "express-session": "^1.17.1",
+    "express-session": "^1.18.2",
     "passport": "^0.4.1",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
+    "@types/express-flash": "^0.0.5",
     "@types/express-session": "^1.17.5",
     "@types/node": "^18.11.18"
   }
